kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flight-fare
  labels:
    name: flight-fare
    environment: production
    app.kubernetes.io/name: flight-fare
    app.kubernetes.io/part-of: flight-fare-prediction
