kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: flight-fare
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: flight-fare-prediction
    app.kubernetes.io/component: database
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      name: postgres
  clusterIP: None
