kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: flight-fare
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: flight-fare-prediction
    app.kubernetes.io/component: cache
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      name: redis
  type: ClusterIP
